# alexandria

./: .gitignore  AGENTS.md  README.md  flake.nix  opencode.jsonc  pyproject.toml
src/alexandria/: __init__.py  chunker.py  cli.py  config.py  discovery.py  embedder.py  mcp_server.py  store.py
tests/: conftest.py  test_config.py  test_openai_embedder.py
