[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alexandria"
version = "0.1.0"
description = "Semantic code search via MCP, backed by vector embeddings"
requires-python = ">=3.11"
dependencies = [
  "qdrant-client",
  "tree-sitter",
  "tree-sitter-language-pack",
  "ollama",
  "mcp[cli]",
  "click",
  "rich",
  "tqdm",
  "pathspec",
]

[project.scripts]
alexandria = "alexandria.cli:main"
alex = "alexandria.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
